--- a/paper.bib
+++ b/paper.bib
@@ -64,6 +64,21 @@
 }
 %LHC
 %%ALICE
+@article{ALICE:2021nir,
+    author = "Acharya, Shreyasi and others",
+    collaboration = "ALICE",
+    title = "{Long- and short-range correlations and their event-scale dependence in high-multiplicity pp collisions at $\boldsymbol{\sqrt{{\textit s}}}=13$ TeV}",
+    eprint = "2101.03110",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-ex",
+    reportNumber = "CERN-EP-2021-006",
+    doi = "10.1007/JHEP05(2021)290",
+    journal = "JHEP",
+    volume = "05",
+    pages = "290",
+    year = "2021"
+}
+
 @article{Abelev:2014pua,
       author         = "Abelev, Betty and others",
       title          = "{Elliptic flow of identified hadrons in Pb-Pb collisions
