--- a/paper.tex
+++ b/paper.tex
@@ -25,8 +25,8 @@
 %
 
 %%% Put your own title + short title here:
-\title{Long- and short-range correlations and their event-scale dependence in high-multiplicity pp collisions at $\boldsymbol{\sqrt{{\textit s}}}=13$~TeV}
-\ShortTitle{Long-range correlations in pp collisions at $\sqrt{s} = 13$~TeV}   % appears on right page headers
+\title{Multiplicity dependent flow and jet fragmentation in ${\sqrt{{\textit s}}}=13$~TeV pp and ${\sqrt{{\textit s_{NN}}}}=5$~TeV p--Pb collisions and their event-scale dependence}
+\ShortTitle{flow and jets in pp collisions in small systems}   % appears on right page headers
 
 %%% Do not change the next lines
 %\Collaboration{ALICE Collaboration\thanks{See Appendix~\ref{app:collab} for the list of collaboration members}}
@@ -34,22 +34,13 @@
 
 \begin{abstract}
 %\input{abstract.tex}
-Two-particle angular correlations are measured in high-multiplicity proton--proton collisions at $\sqrt{s} =13$~TeV by the ALICE Collaboration. The yields of particle pairs at short-($\Delta\eta$ $\sim$ 0) and long-range ($1.6 < |\Delta\eta| < 1.8$) in pseudorapidity are extracted on the near-side ($\Delta\varphi$ $\sim$ 0).
-They are reported as a function of transverse momentum ($p_{\mathrm T}$) in the range 1~$<p_{\mathrm T}<$~4 GeV/$c$.
-Furthermore, the event-scale dependence is studied for the first time by requiring the presence of high-$p_{\rm T}$ leading particles or jets for varying $p_{\rm T}$ thresholds. 
-The results demonstrate that the long-range ``ridge'' yield, possibly related to the collective behavior of the system, is present in events with high-$p_{\mathrm T}$ processes as well. The magnitudes of the short- and long-range yields are found to grow with the event scale. 
-The results are compared to EPOS~LHC and PYTHIA~8 calculations, with and without string-shoving interactions. It is found that while both models describe the qualitative trends in the data, calculations from EPOS~LHC show a better quantitative agreement for the $p_{\rm T}$ dependency, while overestimating the event-scale dependency.
+Long- and short-range correlations for pairs of charged particles with two-particle angular correlations are studied in ${\sqrt{{\textit s}}}=13$~TeV pp and ${\sqrt{{\textit s_{NN}}}}=5$~TeV p--Pb collisions. The correlation functions are measured as a function of relative azimuthal angle $\Delta\varphi$, and pseudorapidity separation $\Delta\eta$, using charged particles within the pseudorapidity interval $\eta < 0.9$ with 1~$ < \pt < $~4~GeV/$c$.
+Fourier coefficients extracted from the long-range correlations ($\Delta\eta > 1.6$) in various high-multiplicity classes are extracted from the low-multiplicity template fit method which allows one to subtract the enhanced away-side jet yields in high-multiplicity with respect to low-multiplicity events. These results set a lower limit of event multiplicity on the flow signal. Furthermore, the flow measurements with the requirement of hard probes such as jets or leading particles are presented. The results are compared to EPOS LHC, PYTHIA 8 calculations with
+string-shoving interactions, and hydrodynamic calculations.
+% findings , physics conclusion.
+% discovery?
 
-%Long-range azimuthal correlations are measured in high-multiplicity pp collisions at center-of-mass energy $\sqrt{s} = 13$~TeV by the ALICE collaboration at the LHC. The measurement was carried out for trigger and associated particles having transverse momenta in the range $1 < p_{\mathrm T} < 5$~GeV/$c$. Trigger and associated particles were separated by a large pseudorapidity interval $1.6 < |\Delta \eta |<1.8$. Measured ridge yield is consistent with the results from the CMS collaboration.
-%These resfults are obtained in a relative pseudorapidity range of $1.6 < |\eta| < 1.8$ and transverse momentum region of  for the trigger and associated particles.
-%In addition to the conventional long-range correlation studies, the results are further investigated in events with a high-$p_{\rm{T}}$ leading track or jet.
-%where jets with a harder fragmentation are present.
-%The jets are reconstructed by using the anti-$k_\mathrm{T}$ algorithm with resolution parameter $R=0.4$ in $|\eta_\mathrm{jet}|<0.4$. 
-%The magnitude of the correlation dubbed ridge yield, is consistent with the results from other LHC experiments for unbiased events.
-%These long-range correlations are also seen in the events containing high-$\pt$ jets for the first time. Furthermore, data show that the ridge yield tends to grow with transverse momentum of the jet or leading track. %increase in events holding $\ptjet > 10$~GeV/$c$.
-%Event-scale selection is further studied by measuring the near-side jet-like peak.
-%The results are compared to $\pythiashoving$ and $\epos$ calculations.  
-%$\pythiashoving$ model can describe low $p_{\mathrm T}$ ridge yields up to 1.5 GeV/$c$ but can not give a good description of $p_{\mathrm T}$ dependence both for the unbiased and jet-tagged events. $\epos$ model can describe $\pt$ dependence of ridge yield while overestimating the yield at the low $\pt<$ 2 GeV/$c$. On the other hand, near-side jet-like correlations are overestimated by $\pythiashoving$ and quantitatively estimated by $\epos$, which is opposite description to the ridge yield.
+
 
 
 \end{abstract}
@@ -58,16 +49,16 @@ The results are compared to EPOS~LHC and PYTHIA~8 calculations, with and without
 
 \setcounter{page}{2}
 
-\input{sec_intro.tex}
-\input{sec_ana.tex}
-\input{sec_results.tex}
-\input{sec_summary.tex}
+\input{sec_intro.tex} %DJ
+\input{sec_ana.tex} %ANNA
+\input{sec_results.tex} %JASPER
+\input{sec_summary.tex} %ALL
 
 %%%%% acknowledgements
 \newenvironment{acknowledgement}{\relax}{\relax}
 \begin{acknowledgement}
 \section*{Acknowledgements}
-\noindent The ALICE Collaboration would like to thank Christian Bierlich for providing the PYTHIA8 String Shoving configurations.
+
 %{\it (TBI: The default acknowledgments will be done by EB centrally.)}
 %\input{acknowledgements.tex}    %%%%%%% done by webmaster team
 \end{acknowledgement}
