--- a/sec_intro.tex
+++ b/sec_intro.tex
@@ -3,21 +3,13 @@
 \section{Introduction}
 \label{sec:intro}
 
-In high-energy nucleus--nucleus collisions at RHIC~\cite{Adams:2005dq,Adcox:2004mh,Arsene:2004fa,Back:2004je} and LHC~\cite{Abelev:2012di, Abelev:2014pua, ATLAS:2011ah}, significant correlations are observed between particles emitted over a wide pseudorapidity range. The origin of these observations are collective effects, which are related to the formation of a strongly interacting quark-gluon plasma (QGP), which exhibits hydrodynamic behavior (see the reviews~\cite{Romatschke:2007mq,Jeon:2015dfa,Romatschke:2017ejr}). 
-Recent theoretical~\cite{Niemi:2015qia,Bernhard:2016tnd,Bernhard:2019bmu} and experimental~\cite{ALICE:2016kpq,Acharya:2017gsw,Acharya:2017zfg,Acharya:2020taj} advancements have contributed significantly to the understanding of the transport properties of the QGP.
+Significant correlations are observed between particles emitted over a wide pseudorapidity range in high-energy nucleus--nucleus collisions at RHIC~\cite{Adams:2005dq,Adcox:2004mh,Arsene:2004fa,Back:2004je} and LHC~\cite{Abelev:2012di, Abelev:2014pua, ATLAS:2011ah}. The origin of these observations are collective effects, which are related to the formation of a strongly interacting quark-gluon plasma (QGP), which exhibits hydrodynamic behavior (see the reviews~\cite{Romatschke:2007mq,Jeon:2015dfa,Romatschke:2017ejr}). Recent theoretical~\cite{Niemi:2015qia,Bernhard:2016tnd,Bernhard:2019bmu} and experimental~\cite{ALICE:2016kpq,Acharya:2017gsw,Acharya:2017zfg,Acharya:2020taj} advancements have contributed significantly to the understanding of the transport properties of the QGP.
 Similar long-range correlations are also observed in high-multiplicity proton--proton (pp)~\cite{Aad:2015gqa,Khachatryan:2015lva,Khachatryan:2016txc,Acharya:2019vdf}, proton--nucleus (pA)~\cite{Abelev:2012ola,Aad:2014lta,Aaboud:2016yar,Khachatryan:2016ibd}, and light nucleus--nucleus collisions~\cite{PHENIX:2018lia,Aidala:2017ajz}. The fact that these correlations extend over a large range in pseudorapidity implies that they originate from early times in these collisions and thus suggest that hydrodynamic behavior is present even in these small systems, although the volume and lifetime of the medium produced in such a collision system are expected to be small, and there are other mechanisms which can produce similar flow-like signals~\cite{Busza:2018rrf,Nagle:2018nvi}.
-%The observed long-range azimuthal correlations suggest flow with hydrodynamic characteristics even in these small systems, though the volume and lifetime of the medium produced by such a system are expected to be small~\cite{Busza:2018rrf,Nagle:2018nvi}. 
 
-Measurements of two-particle angular correlations provide information on many physical effects, including collectivity, hadronization, fragmentation, and femtoscopic effects~\cite{Lisa:2005dd}, and are typically quantified as a function of $\Delta\eta$, the relative pseudorapidity, and $\Delta\varphi$, the separation in azimuthal angle, of particle pairs. The long-range structure of two-particle angular correlations is well suited to analyze collective effects, since it is not created by resonance decays nor fragmentation of high-momentum partons. A typical source of long-range correlations in Monte Carlo pp generators is the momentum conservation. %and away-side ($\Delta\varphi$ $\approx$ $\pi$) jet correlations.
-The enhancement in the yield of two-particle correlations at small $\Delta\varphi$ that extends over a large $\Delta\eta$ is dubbed ``ridge'' due to its characteristic shape in the $\Delta\eta$--$\Delta\varphi$ plane.
-The shape of these $\Delta\varphi$ correlations can be studied via a Fourier decomposition~\cite{Poskanzer:1998yz,Voloshin:2008dg}. The second and third order terms are the dominant harmonic coefficients. In heavy-ion collisions, harmonic coefficients can be related to the collision geometry and density fluctuations of the colliding nuclei~\cite{Alver:2010gr,Alver:2010dn,ALICE:2011ab} and to transport properties of the QGP in relativistic viscous hydrodynamic models~\cite{Gale:2012rq,Niemi:2015qia,Shen:2014vra,Bernhard:2016tnd,Bernhard:2019bmu}.
-
-% TODO more pA measurements
-The ridge structures in high-multiplicity pp and p--Pb events have been attributed to initial-state or final-state effects. Initial-state effects, usually attributed to gluon saturation~\cite{Dusling:2012cg,Bzdak:2013zma}, can form long-range
+These flow signal in high-multiplicity pp and p--Pb events have been attributed to initial-state or final-state effects. Initial-state effects, usually attributed to gluon saturation~\cite{Dusling:2012cg,Bzdak:2013zma}, can form long-range
 correlations along the longitudinal direction. The final-state effects might be parton-induced interactions~\cite{Arbuzov:2011yr} or collective phenomena due to hydrodynamic behavior of the produced matter arising in a high-density system possibly formed in these collisions~\cite{Weller:2017tsr,Zhao:2017rgg}. 
 Hybrid models implementing both effects are generally used in hydrodynamic simulations~\cite{Greif:2017bnr,Mantysaari:2017cni}. EPOS LHC describes collectivity in small systems with a parameterized hydrodynamic evolution of the high-energy density region, so called ``core'', formed by many color string fields~\cite{Pierog:2013ria}.
 The proton shape and its fluctuations are also important to model small systems~\cite{Mantysaari:2017cni}.
-%Nevertheless, the hydrodynamics itself might not be the only mechanism of the observed collectivity~\cite{Zhao:2020pty,Schenke:2019pmk}. 
 To understand the influence of initial- or final-state effects, and to possibly disentangle the two, a quantitative description of the measurements in small systems~\cite{Schenke:2019pmk,Schenke:2020mbo} needs to account for details of the initial state.
 Systematic studies of these correlation effects from small to large systems are being performed, both experimentally~\cite{Acharya:2019vdf} and theoretically~\cite{Schenke:2020mbo}.
 However, the quantitative description of the full set of experimental data has not been achieved yet.
@@ -25,27 +17,13 @@ A summary of various explanations for the observed correlations in small systems
 
 Besides the hybrid models mentioned above, alternative approaches were developed to describe collectivity in small systems. A microscopic model for collectivity was implemented in the PYTHIA~8 event generator, which is based on interacting strings (string shoving) and is called the “string shoving model”~\cite{Bierlich:2017vhg}. In this model, strings repel each other in the transverse direction, which results in microscopic transverse pressure and, consequently, in long-range correlations. PYTHIA~8 with string shoving can qualitatively reproduce the near-side ($\Delta\varphi\sim0$) ridge yield measured by the CMS Collaboration~\cite{Khachatryan:2016txc}. This challenges the hydrodynamic picture and predicts modifications of the jet fragmentation properties~\cite{Bierlich:2019ixq}.
 
+Up to date, flow extraction methods in these small systems have not been fully understood due to the strong jet fragmentation bias. In order to remove the remaining non-flow contributions in i.e. cumulant methods~\cite{}, we perform a flow-extraction method using a low-multiplicity template. Flow coefficients in various high-multiplicity classes are extracted from the low-multiplicity template fit method. This template fit method allows one to subtract the enhanced away-side jet yields in high-multiplicity with respect to low-multiplicity events, possibly testing a lower limit of event multiplicity on the flow signal.
+
 It is expected that final-state interactions affect also produced jets if they are the source of collectivity in small systems. Proving the presence of jet quenching~\cite{Gyulassy:1990ye,Wang:1991xy} would be another crucial evidence of the existence of a high-density strongly-interacting system, possibly a QGP, in high-multiplicity pp collisions. However, there is no evidence observed so far for the jet quenching effect in high-multiplicity pp and p--Pb collisions~\cite{Khachatryan:2016odn,Adam:2016jfp,Adam:2016dau,Acharya:2017okq}. Jet fragmentation can be studied in two-particle angular correlations in short-range correlations around $(\Delta\eta$, $\Delta\varphi)=(0,0)$~\cite{Adam:2016tsv}.  
 
-%The choice of a reference system can thus be ambiguous especially forBernhard2019 pp since the hard probes themselves are enhanced by requiring high-multiplicity event~\cite{Adam:2016jfp,Acharya:2018egz}, also resulting in enhancement of probability to select events with high-$\pt$ jets.
-%Small system studies: A theory overview 1807.07191 Strickland:2018exs
-%find one more one this regard.
-%The ATLAS experiment recently showed that the ridge remains in events tagged with a Z-boson~\cite{Aaboud:2019mcw}, possibly with an accompanying jet.
-%The impact parameter dependence on dijet or multi-jet production in pp collisions was studied in~\cite{Frankfurt:2003td,Frankfurt:2010ea}.
-
-
-% check this paper https://arxiv.org/abs/1910.13978 ATLAS pt cut...
-% Bierlich:2017vhg (Shoving) Bierlich:2019ixq  
-% add vn extractio??
-% flow vn extraction : awayside ??
-% 
-% AA geometry dominant for v2 and what about in pp, b vs v2 or ridge..
-% Frankfurt:2003td
-% Aaboud:2019mcw Z-tagged ridge ATLAS
-
-To further investigate the interplay of jet production and collective effects in small systems, long- and short-range correlations are studied simultaneously in high-multiplicity pp collisions at $\sqrt{s} =13$ TeV using the ALICE LHC Run 2 data collected with the high-multiplicity event trigger in 2016--2018. In this article, the near-side per-trigger yield at large pseudorapidity separation is presented as a function of transverse momentum. The results are compared with previous measurements by the CMS Collaboration~\cite{Khachatryan:2015lva}. %In addition, we report the ridge yield in events, where a hard scattering took place, to explore possible physical origins of the long-range correlations.
-In addition, the ridge yield and near-side jet-like correlations with the event-scale selection are reported. The event-scale selection is done by requiring a minimum transverse momentum of the leading particle or the reconstructed jet at midrapidity, which is expected to bias the impact parameter of pp collisions to be smaller on average~\cite{Sjostrand:1986ep,Frankfurt:2010ea}. At the same time, the transverse momentum of the leading particle or the reconstructed jet is a measure of the momentum transfer in the hard parton scattering~\cite{Chatrchyan:2012tt,Chatrchyan:2011id}. The event-scale dependence of the second-flow harmonic $v_{2}$ has previously been studied in pp collisions with and without a tagged $Z$ boson, where little or no dependence was observed~\cite{Aaboud:2019mcw}.
+As an extension of \cite{ALICE:2021nir}, the interplay of jet production and collective effects in small systems, long- and short-range correlations are studied simultaneously in high-multiplicity pp collisions at $\sqrt{s} =13$ TeV using the ALICE LHC Run 2 data collected with the high-multiplicity event trigger in 2016--2018. 
+In addition, the flow and near-side jet-like correlations with the event-scale selection are reported. The event-scale selection is done by requiring a minimum transverse momentum of the leading particle or the reconstructed jet at midrapidity, which is expected to bias the impact parameter of pp collisions to be smaller on average~\cite{Sjostrand:1986ep,Frankfurt:2010ea}. At the same time, the transverse momentum of the leading particle or the reconstructed jet is a measure of the momentum transfer in the hard parton scattering~\cite{Chatrchyan:2012tt,Chatrchyan:2011id}. The event-scale dependence of the second-flow harmonic $v_{2}$ has previously been studied in pp collisions with and without a tagged $Z$ boson, where little or no dependence was observed~\cite{Aaboud:2019mcw}.
 
 The experimental setup and analysis method are described in Sec.~\ref{sec:experiment} and \ref{sec:ana}, respectively. The sources of systematic uncertainties are discussed in Sec.~\ref{sec:uncertainties}. The results and comparisons with model calculations of the measurements are presented in Sec.~\ref{sec:results}. Finally, results are summarized in~Sec.~\ref{sec:summary}.
 
- %h has indicated the formation of a strongly interacting quark-gluon plasma (QGP) matteras indicated the formation of a strongly interacting quark-gluon plasma (QGP) matter
+ 
