--- a/paper.bib
+++ b/paper.bib
@@ -1602,3 +1602,75 @@ author = "G.I. Kopylov"
     pages = "64",
     year = "2020"
 }
+
+@article{PHENIX:2006gto,
+    author = "Adler, S. S. and others",
+    collaboration = "PHENIX",
+    title = "{Jet properties from dihadron correlations in $p^+ p$ collisions at $\sqrt{s}$ = 200-GeV}",
+    eprint = "hep-ex/0605039",
+    archivePrefix = "arXiv",
+    doi = "10.1103/PhysRevD.74.072002",
+    journal = "Phys. Rev. D",
+    volume = "74",
+    pages = "072002",
+    year = "2006"
+}
+@article{ATLAS:2015hzw,
+    author = "Aad, Georges and others",
+    collaboration = "ATLAS",
+    title = "{Observation of Long-Range Elliptic Azimuthal Anisotropies in $\sqrt{s}=$13 and 2.76 TeV $pp$ Collisions with the ATLAS Detector}",
+    eprint = "1509.04776",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ex",
+    reportNumber = "CERN-PH-EP-2015-251",
+    doi = "10.1103/PhysRevLett.116.172301",
+    journal = "Phys. Rev. Lett.",
+    volume = "116",
+    number = "17",
+    pages = "172301",
+    year = "2016"
+}
+@article{ATLAS:2016yzd,
+    author = "Aaboud, Morad and others",
+    collaboration = "ATLAS",
+    title = "{Measurements of long-range azimuthal anisotropies and associated Fourier coefficients for $pp$ collisions at $\sqrt{s}=5.02$ and $13$ TeV and $p$+Pb collisions at $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV with the ATLAS detector}",
+    eprint = "1609.06213",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-ex",
+    reportNumber = "CERN-EP-2016-200",
+    doi = "10.1103/PhysRevC.96.024908",
+    journal = "Phys. Rev. C",
+    volume = "96",
+    number = "2",
+    pages = "024908",
+    year = "2017"
+}
+
+@article{ALICE:2012eyl,
+    author = "Abelev, Betty and others",
+    collaboration = "ALICE",
+    title = "{Long-range angular correlations on the near and away side in $p$-Pb collisions at $\sqrt{s_{NN}}=5.02$ TeV}",
+    eprint = "1212.2001",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-ex",
+    reportNumber = "CERN-PH-EP-2012-359",
+    doi = "10.1016/j.physletb.2013.01.012",
+    journal = "Phys. Lett. B",
+    volume = "719",
+    pages = "29--41",
+    year = "2013"
+}
+@article{ALICE:2013snk,
+    author = "Abelev, Betty Bezverkhny and others",
+    collaboration = "ALICE",
+    title = "{Long-range angular correlations of $\rm \pi$, K and p in p-Pb collisions at $\sqrt{s_{\rm NN}}$ = 5.02 TeV}",
+    eprint = "1307.3237",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-ex",
+    reportNumber = "CERN-PH-EP-2013-115",
+    doi = "10.1016/j.physletb.2013.08.024",
+    journal = "Phys. Lett. B",
+    volume = "726",
+    pages = "164--177",
+    year = "2013"
+}
