--- a/sec_summary.tex
+++ b/sec_summary.tex
@@ -2,3 +2,4 @@
 
 \section{Conclusions}
 \label{sec:summary}
+Long-range correlations for pairs of charged particles with two-particle angular correlations are studied in ${\sqrt{{\textit s}}}=13$~TeV pp and ${\sqrt{{\textit s_{NN}}}}=5$~TeV p--Pb collisions. Fourier coefficients extracted from the long-range correlations ($\Delta\eta > 1.6$) in various high-multiplicity classes are extracted from the low-multiplicity template fit method which allows one to subtract the enhanced away-side jet yields in high-multiplicity with respect to low-multiplicity events. These results show a weak multiplicity dependence on $v_2$ both for pp and p--Pb collisions, a hint of disappearing $v_2$ signal below $N_{ch}$=10 in $\eta|<0.5$. Furthermore, the events with hard probes such as jets or leading particles doesn't show any changes in $v_2$ within the uncertainties.
